--- a/static/style.css
+++ b/static/style.css
@@ -62,3 +62,39 @@
 }
 
 
+/* Lightbox */
+.lightboxOverlay {
+    background-color:#000;
+    opacity: .5;
+    bottom:0px;
+    left:0px;"
+    overflow:auto;
+    position:fixed;
+    right:0px;
+    top:0px;
+    z-index:1000;
+}
+
+.lightboxDialog {
+    background-color: white;
+    border: 1px #000000 solid;
+    border-radius: 5px;
+    left:0;
+    margin-left:auto;
+    margin-right:auto;
+    padding:20px;
+    right:0;
+    top:70px;
+    width: 400px;
+    z-index:1001;
+    position:fixed;
+}
+
+.lightbox p {
+    /* style of message text */
+}
+
+.lightbox button {
+    display:block;
+    margin: 1em auto auto auto;
+}
